utils: fix buildGenericWantDigest for RFC9530 (issue8191)
Motivation:
The Checksums class uses guava's Ordering.explicit in buildGenericWantDigest. However, explicit ordering throws IncomparableValueException if element is not in the explicit list:

Caused by: com.google.common.collect.Ordering$IncomparableValueException: Cannot compare value: MD5
	at com.google.common.collect.ExplicitOrdering.rank(ExplicitOrdering.java:46)
	at com.google.common.collect.ExplicitOrdering.compare(ExplicitOrdering.java:40)
	at java.base/java.util.TimSort.countRunAndMakeAscending(TimSort.java:355)
	at java.base/java.util.TimSort.sort(TimSort.java:220)
	at java.base/java.util.Arrays.sort(Arrays.java:1304)
	at java.base/java.util.stream.SortedOps$SizedRefSortingSink.end(SortedOps.java:353)
	at java.base/java.util.stream.AbstractPipeline.copyInto(AbstractPipeline.java:571)
	at java.base/java.util.stream.AbstractPipeline.wrapAndCopyInto(AbstractPipeline.java:560)
	at java.base/java.util.stream.ReduceOps$ReduceOp.evaluateSequential(ReduceOps.java:921)
	at java.base/java.util.stream.AbstractPipeline.evaluate(AbstractPipeline.java:265)
	at java.base/java.util.stream.ReferencePipeline.collect(ReferencePipeline.java:723)
	at org.dcache.util.Checksums.buildGenericWantDigest(Checksums.java:190)

Modification:
As instead of using Ordering.explicit, use List.of, which has the same
effect. Derive Want-Digest header and explicit ordering from that lists if needed.

Result:
fixed runtime exception and failing HTTP-TPC  transfers

Fixes: #8191
Acked-by: Dmitry Litvintsev
Target: master, 12.0
Require-book: no
Require-notes: yes